# llm-paper-summarizer

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
src/pipeline/: pdf_io.py  summarize.py  ui.py
